menyesuikan
